--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,141 @@ section.hero button{
     text-transform:uppercase;
 }
 
+section.best-sellers{
+    padding-top:90px;
+    padding-bottom:80px;
+
+}
+
+section.best-sellers h2{
+    margin-top:0;
+    margin-bottom:30px;
+    font-size:34px;
+    font-weight:400;
+    line-height:42px;
+    text-align:center;
+}
+
+section.best-sellers hr{
+    width:60px;
+    margin:auto;
+    border:none;
+    height:6px;
+    background-color: #33C6DD;
+    margin-bottom:76px;
+}
+
+section.best-sellers .product-slider .product{
+    width:33%;
+    padding:40px;
+    text-align:center;
+    border:1px solid #DDDDDD;
+    border-radius:8px;
+    margin:0 8px;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    position:relative;
+}
+
+section.best-sellers .product-slider .product.new::before{
+    
+    content:'New';
+    position:absolute;
+    top:12px;
+    right:12px;
+    color:white;
+    padding:5px 26px;
+    text-align:center;
+    background-color:#614DC9;
+    border-radius:16px;
+    font-weight:700;
+    font-size:14px;
+}
+
+section.best-sellers .product-slider .product img{
+    max-width:100%;
+}
+
+section.best-sellers .product-slider .container{
+    display:flex;
+    justify-content:space-around;
+}
+
+section.best-sellers .product-slider .product img{
+    max-width:100%;
+}
+
+section.best-sellers .product-slider .product .product-info{
+   margin-top:50px;
+}
+
+
+
+section.best-sellers .product-slider .product h5{
+   font-weight:400;
+   font-size:14px;
+   line-height:30px;
+   color:#33C6DD;
+   margin-top:0;
+   margin-bottom:10px;
+
+}
+
+section.best-sellers .product-slider .product h4{
+    font-weight:400;
+    font-size:20px;
+    line-height:26px;
+    margin-top:0;
+    margin-bottom:10px;
+    
+    
+ }
+
+ section.best-sellers .product-slider .product h3{
+    font-weight:700;
+    font-size:28px;
+    line-height:30px;
+    margin-top:0;
+    margin-bottom:0px;
+    
+    
+ }
+
+ section.best-sellers .product-slider .product .price{
+    display:flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content:center;
+    margin-bottom:20px;
+ }
+
+ section.best-sellers .product-slider .product .price.discount h3{
+    color:#EC1C1C;
+   }
+  
+
+ section.best-sellers .product-slider .product span.original-price{
+  margin:0 10px;
+  font-size:16px;
+  line-height:24px;
+  text-decoration: line-through;
+  color:#9B9B9B;
+ }
+
+ section.best-sellers .product-slider .product button{
+   height:44px;
+   background-color:transparent;
+   border:1px solid #000000;
+   border-radius:25px;
+   width:220px;
+   max-width:100%;
+   font-size:16px;
+   line-height: 24px;
+   text-transform: uppercase;
+
+    
+    
+ }
+
+
