Implemented designing and styling Newsletter section

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ section.hero button{
 
 section.best-sellers{
     padding-top:90px;
-    padding-bottom:80px;
+    
 
 }
 
@@ -246,9 +246,62 @@ section.best-sellers .product-slider .product h4{
    font-size:16px;
    line-height: 24px;
    text-transform: uppercase;
+}
 
+section.newsletter{
+    background-color:#f5f5f5;
+    width:950px;
+    max-width:100%;
+    margin:80px auto;
+    padding:72px 0;
+    text-align:center;
+}
+
+section.newsletter h3{
+    font-weight:400;
+    font-size:24px;
+    line-height:42px;
+    margin-top:0;
+    margin-bottom:10px;
+}
+
+section.newsletter p{
     
+    font-size:16px;
+    line-height:24px;
+    margin-top:0;
+    margin-bottom:20px;
     
- }
+}
+
+section.newsletter input[type=email] {
+    width:320px;
+    height:48px;
+    border-radius: 25px 0 0 25px;
+    padding:0;
+    padding-left:24px;
+    font-size:14px;
+    line-height:21px;
+    border:1px solid #000000;
+    box-sizing:border-box;
+}
+
+section.newsletter input[type=email]::placeholder {
+   color:#3E3E3E;
+}
+
+section.newsletter button[type=submit] {
+    background-color:#614DC9;
+    border-radius:1px solid #614DC9;
+    border-radius: 0 25px 25px 0;
+    height:48px;
+    padding:0 36px;
+    font-weight:400;
+    font-size:14px;
+    line-height:21px;
+    text-transform: uppercase;
+}
+    
+
 
 
