--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,10 @@ header nav ul a{
     text-decoration:none;
     color:#3E3E3E;
     font-size:15px;
+    cursor:pointer;
+}
+header nav ul a:hover{
+    color:#33C6DD;
 }
 section.hero{
     position:relative;
@@ -114,6 +118,15 @@ section.hero button{
     text-transform:uppercase;
 }
 
+section.hero button:hover{
+    
+    background-color:white;
+    color:#33C6DD;
+    border:1px solid #33C6DD;
+    
+    
+}
+
 section.best-sellers{
     padding-top:90px;
     
@@ -165,7 +178,10 @@ section.best-sellers .product-slider .product.new::before{
     font-weight:700;
     font-size:14px;
 }
-
+section.best-sellers .product-slider .product:hover{
+    cursor:pointer;
+    
+}
 section.best-sellers .product-slider .product img{
     max-width:100%;
 }
@@ -248,6 +264,13 @@ section.best-sellers .product-slider .product h4{
    text-transform: uppercase;
 }
 
+section.best-sellers .product-slider .product:hover button{
+    
+    background-color:#33C6DD;
+    border:1px solid #33C6DD;
+    color:white;
+ }
+
 section.newsletter{
     background-color:#f5f5f5;
     width:950px;
@@ -301,6 +324,13 @@ section.newsletter button[type=submit] {
     text-transform: uppercase;
 }
 
+section.newsletter button[type=submit]:hover {
+    background-color:white;
+    color:#614DC9;
+    border:1px solid #000000;
+    cursor:pointer;
+}
+
 footer {
     background-color: #3E3E3E;
     color:white;
@@ -346,6 +376,11 @@ footer ul li:last-of-type{
 footer ul li a {
     color:white;
     text-decoration: none;
+}
+
+footer ul li a:hover {
+    color:#33C6DD;
+    
 }
 
 section.copyright {
