Media query for smaller desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ section.newsletter{
     background-color:#f5f5f5;
     width:950px;
     max-width:100%;
-    margin:80px auto;
+    margin:70px auto;
     padding:72px 0;
     text-align:center;
 }
@@ -391,6 +391,151 @@ section.copyright {
   font-weight:400;
   font-size:16px;
   line-height:22px;
+}
+
+/*Styles for smaller desktop*/
+@media screen and (max-width : 1440px) {
+    .container {
+        width:1180px;
+        max-width:90%;
+    }
+
+    section.hero h1,
+    section.hero p{
+         margin-bottom:12px;
+    }
+
+    section.hero h1{
+        font-size:44px;
+        line-height:50px;
+    }
+
+
+    section.hero p{
+        font-size:18px;
+        line-height:26px;
+    }
+
+    section.hero button{
+        font-size:14px;
+    }
+
+    section.best-sellers .product-slider .product h5{
+        font-size:12px;
+        margin-bottom:8px;
+     }
+    
+     section.best-sellers .product-slider .product h4{
+          font-size:16px;
+          margin-bottom:8px;
+     }
+     
+      section.best-sellers .product-slider .product h3{
+         font-size:24px;
+         line-height:30px;
+         
+     }
+     
+      section.best-sellers .product-slider .product .price{
+         margin-bottom:6px;
+     }
+      section.best-sellers .product-slider .product span.original-price{
+       
+       font-size:14px;
+       line-height:21px;
+     }
+     
+      section.best-sellers .product-slider .product button{
+        height:40px;
+        width:180px;
+        font-size:14px;
+        line-height:21px;
+     }
+
+     section.newsletter{
+        width:880px;
+        margin:70px auto;
+        padding:50px 0;
+    }
+    
+    section.newsletter h3{
+        font-size:22px;
+        
+    }
+    
+    section.newsletter p{
+        font-size:14px;
+        line-height:21px;
+        margin-bottom:15px;
+    }
+    
+    section.newsletter input[type=email] {
+        font-size:12px;
+        line-height:18px;
+    }
+    
+    section.newsletter button[type=submit] {
+        font-size:12px;
+        line-height:18px;
+    }
+
+    footer {
+         padding:50px 0;
+    }
+    
+    footer .container{
+        width: 1180px;
+        max-width: 90%;
+    }
+    
+    footer ul {
+        list-style-type: none;
+        padding:0;
+        margin:0;
+        width:25%;
+    }
+    
+    footer ul li.list-title{
+        
+        font-size:16px;
+        margin-bottom:12px;
+    }
+    
+    footer ul li{
+        font-size:14px;
+        line-height:21px;
+    }
+
+    section.copyright {
+        padding:14px 0;
+        font-size:14px;
+        
+    }
+    
+    
+    
+    
+     
+
+}
+/*Styles for tablets*/
+@media screen and (max-width : 960px) {
+
+    .container {
+        width:92%;
+        max-width:92%;
+    }
+    
+}
+
+/*Styles for mobiles*/
+@media screen and (max-width : 576px) {
+
+    .container {
+        width:92%;
+        max-width:92%;
+    }
+    
 }
     
 
