Media query for tablets

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ header .container{
     justify-content:space-between;
     align-items:center;
     height:100%;
+   
 }
 
 header nav ul {
@@ -41,13 +42,18 @@ header nav ul {
 }
 header nav ul li{
     display:inline-block;
-    margin-right:26px;
+    margin-left:26px;
     color:black;
 
 }
 
+header nav ul li.menu-icon{
+    display:none;
+
+}
+
 header nav ul li:last-of-type{
-    margin-right:0;
+    margin-left:0;
 }
 
 header nav ul a{
@@ -525,6 +531,114 @@ section.copyright {
         width:92%;
         max-width:92%;
     }
+
+    header nav ul li{
+        display:none;
+    
+    }
+    
+    header nav ul li.menu-icon{
+        display:inline-block;
+    
+    }
+    
+
+    section.hero h1{
+        font-size:40px;
+        line-height:46px;
+    }
+
+
+    section.hero p{
+        font-size:16px;
+        line-height:24px;
+    }
+
+    section.hero button{
+        font-size:14px;
+    }
+
+    section.best-sellers h2{
+        margin-bottom:12px;
+        font-size:28px;
+        line-height:38px;
+    }
+    
+    section.best-sellers hr{
+        width:66px;
+        height:6px;
+        margin-bottom:48px;
+    }
+
+    section.best-sellers .product-slider .product h5{
+        font-size:11px;
+        margin-bottom:5px;
+     }
+    
+     section.best-sellers .product-slider .product h4{
+          font-size:13px;
+          margin-bottom:6px;
+     }
+     
+      section.best-sellers .product-slider .product h3{
+         font-size:16px;
+         
+     }
+
+     section.best-sellers .product-slider .product.new::before{
+        top:6px;
+        right:6px;
+        padding:5px 14px;
+        font-size:11px;
+    }
+     
+    
+    section.best-sellers .product-slider .product span.original-price{
+       font-size:9px;
+       
+     }
+     
+      section.best-sellers .product-slider .product button{
+        height:36px;
+        width:146px;
+        font-size:12px;
+        line-height:18px;
+     }
+
+     section.newsletter{
+        width:100%;
+        margin:48px auto;
+    }
+
+    footer .container{
+        width: 92%;
+        max-width: 92%;
+    }
+    
+    footer ul {
+        list-style-type: none;
+        padding:0;
+        margin:0;
+        width:25%;
+    }
+    
+    footer ul li.list-title{
+        
+        font-size:16px;
+        margin-bottom:12px;
+    }
+    
+    footer ul li{
+        font-size:14px;
+        line-height:21px;
+    }
+
+    section.copyright {
+        padding:14px 0;
+        font-size:14px;
+        
+    }
+    
     
 }
 
